Time: 27 ms (86.67%), Space: 51.5 MB (57.05%) - LeetHub